- Fixed problem when parsing feeds from http://macintouch.com/rss.xml. Some servers report an
  error unless the User-agent field is specified in the HTTP header.
- Added built-in browser support. Web pages can now be opened in Vienna in separate tabs as an
  option. Next and Previous Tab commands added to the Window menu. Close Tab added to the File
  menu.
- Added option in Preferences to open web pages in Vienna.
- Close Window command changed to Shift+Command+W when tabs are open for consistency with
  Camino and Safari.

2.0.0.2006
----------
- Can now sort and double-click activity log items.
- Added option to set the minimum font size in the article display pane.
- Search field now searches article titles as well as the text.
- New application icon. (Thanks to Jasper Hauser - http://www.jasperhauser.nl/icon/).
- Added French localisation. (Thanks to Cyril Gautrias).
- Dropped Compact Database command from the File menu. This is now accessible through the
  scripting interface. Most people don't actually need to compact the database now.
- Added "Validate Feed" command to the File menu.

2.0.0.2005
----------
- Updates to Swedish localisation.
- Fixed entity decoding bug that caused corrupted characters in the Der Spiegel feed.
- Fixed character set translation bug that caused some UTF8 characters to appear corrupted.
- Improvements to handling of article GUID/ID to eliminate duplicate articles and better
  track articles that have been modified. This change requires a database upgrade.
- Left/Right arrow keys now move between the folder list and the articles list.
- Added Trash folder. Delete Article now moves selected articles to the Trash folder. New
  Empty Trash command on the Vienna menu can be used to empty the trash folder. (Note: it
  is intentional that you can rename the Trash folder).
- Added Undo/Redo support for the following actions: marking articles read, marking articles
  flagged, renaming folders and deleting articles.