@@ -1,12 +1,12 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<title>Frequently Asked Questions</title>
+	<title>How Do I?</title>
 	<link rel="stylesheet" href="helpstyle.css" type="text/css">
 </style>
 </head>
 <body>
-<span><img src="images/Small-Vienna-Logo.jpg" />&nbsp;&nbsp;</span><span class="header">Frequently Asked Questions</span>
+<span><img src="images/Small-Vienna-Logo.jpg" />&nbsp;&nbsp;</span><span class="header">How Do I?</span>
 <p>Info to go here.</p>
 </body>
 </html>
