@@ -7,6 +7,13 @@
 </head>
 <body>
 <span><img src="images/Small-Vienna-Logo.jpg" />&nbsp;&nbsp;</span><span class="header">Introduction to Vienna</span>
-<p>Vienna is an application that allows you to read RSS or Atom news feeds on your Mac OSX computer. </p>
+<p>Vienna is an application that allows you to read RSS or Atom news feeds on your Mac OSX computer. It automates the
+job of retrieving news articles from all subscribed feeds and storing them in a local database for reading offline. It
+provides features that allow you to search feeds for keywords or phrases, tag articles with a flag for future reference
+and organise related feeds together under groups. You can create smart folders that make it easy to dynamically retrieve
+and view all articles in the database that match a search criteria. The built-in web browser allows you to go to the
+articles web page or view links in the article directly in Vienna in separate tabs.</p>
+<p>Vienna is designed to be simple and easy to use. A clean, uncluttered, interface maximises the space for articles and
+just a few controls are needed to perform the most common actions in the user interface.</p>
 </body>
 </html>
